--- a/OcalimochoApp/app/src/main/res/layout/activity_carcel.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_carcel.xml
@@ -5,20 +5,13 @@
     android:gravity="center"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
-    <TextView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:id="@+id/titulo"
-        android:text="CARCEL"/>
+
     <ImageView
         android:id="@+id/imagencarcel"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:gravity="start"
+        android:padding="16dp"
         android:contentDescription="Imagen de carcel"/>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,13 +22,14 @@
         android:layout_alignParentTop="true">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="70dp"
             android:id="@+id/tirada"
-            android:textSize="22dp"
+            android:textSize="20sp"
             android:onClick="tirarDados"
-            android:textColor="#000000"
-            android:text="tirada"/>
+            android:textColor="#ffff"
+            android:text="TIRAR"/>
 
 
     </LinearLayout>
@@ -46,19 +40,21 @@
         android:layout_height="50dp"
         android:id="@+id/castigo"
         android:textSize="22dp"
-        android:textColor="#000000"
-        android:text="La fianza para salir es: "/>
-
-
+        android:gravity="center"
+        android:textColor="#eeeeee"
+        android:text="La fianza para salir es: "
+        android:layout_marginBottom="42dp"/>
 
 
 
     <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
