--- a/OcalimochoApp/app/src/main/res/layout/activity_main.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:text="Comenzar"
+            android:text="COMENZAR"
             android:textSize="14sp" />
 
 
