--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="Tirar dado"
+            android:text="TIRAR DADO"
             style="?android:attr/borderlessButtonStyle"/>
 
     </LinearLayout>
