--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -1,6 +1,7 @@
 <!-- A CardView that contains a TextView -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -11,16 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="30dp"
+        android:background="#616161"
         android:translationZ="2dp"
-        card_view:cardCornerRadius="2dp"
-        android:background="#616161">
+        card_view:cardCornerRadius="2dp">
 
         <LinearLayout
             android:id="@+id/card_view_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="15dp">
+            android:paddingBottom="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -28,18 +29,29 @@
                 android:background="@color/ColorAccent"
                 android:gravity="start"
                 android:orientation="horizontal"
-                android:padding="15dp">
+                android:padding="16dp">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <View
+                        android:id="@+id/imageView"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/circle" />
 
 
-                <TextView
-                    android:id="@+id/posicionCasilla"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:text="Pos"
-                    android:textColor="#E0F2F1"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/posicionCasilla"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="22"
+                        android:textColor="#616161"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/nombreCasilla"
