Adaptada interfaz de los minijuegos a falta de las imagenes y márgenes. En los duelos y en la pregunta una vez que pulsas el dado o respuesta el botón se desactiva.

--- a/OcalimochoApp/app/src/main/res/layout/activity_mimica.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_mimica.xml
@@ -5,15 +5,7 @@
     android:gravity="center"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
-    <TextView
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:id="@+id/titulo"
-        android:text="MIMICA"/>
+
     <ImageView
         android:id="@+id/imagenmimica"
         android:layout_width="100dp"
@@ -26,8 +18,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textColor="#000000"
+        android:textSize="14sp"
         android:id="@+id/instrucciones"
         android:text="La pelicula que te ha tocado es: "/>
 
@@ -35,16 +26,17 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="25dp"
-        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textAlignment="center"
         android:id="@+id/pelicula"
         android:text=" "/>
     <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
