--- a/OcalimochoApp/app/src/main/res/layout/activity_duelo.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_duelo.xml
@@ -25,15 +25,15 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/dado1"
-            android:textSize="22dp"
+            android:textSize="14sp"
             android:onClick="tirardado1"
             android:textColor="#ffff"
-            android:text="dado1"/>
+            android:text="DADO 1"/>
         <TextView
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/resultado1"
-            android:textSize="22dp"
+            android:textSize="16sp"
             android:textColor="#ffff"/>
 
     </LinearLayout>
@@ -49,17 +49,17 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/dado2"
-            android:textSize="22dp"
+            android:textSize="14sp"
             android:onClick="tirardado2"
             android:textColor="#ffff"
-            android:text="dado2"/>
+            android:text="DADO 2"/>
 
 
         <TextView
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/resultado2"
-            android:textSize="22dp"
+            android:textSize="16sp"
             android:textColor="#ffff"/>
     </LinearLayout>
 
@@ -71,11 +71,12 @@
 
     <Button
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+        android:textSize="14sp"
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
