--- a/OcalimochoApp/app/src/main/res/layout/activity_duelo_tres.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_duelo_tres.xml
@@ -5,15 +5,7 @@
     android:gravity="center"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:id="@+id/titulo"
-        android:text="DUELO DE 3"/>
+
     <ImageView
         android:id="@+id/imagenduelo3"
         android:layout_width="100dp"
@@ -29,19 +21,18 @@
         android:layout_alignParentTop="true">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/dado1"
-            android:textSize="22dp"
+            android:textSize="14sp"
             android:onClick="tirardado1"
-            android:textColor="#000000"
-            android:text="dado1"/>
+            android:text="DADO 1"/>
         <TextView
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/resultado1"
-            android:textSize="22dp"
-            android:textColor="#000000"/>
+            android:textSize="16sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -52,21 +43,20 @@
         android:gravity="center"
         android:layout_alignParentTop="true">
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/dado2"
-            android:textSize="22dp"
+            android:textSize="14sp"
             android:onClick="tirardado2"
-            android:textColor="#000000"
-            android:text="dado2"/>
+            android:text="DADO 2"/>
 
 
         <TextView
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/resultado2"
-            android:textSize="22dp"
-            android:textColor="#000000"/>
+            android:textSize="16sp"/>
     </LinearLayout>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -77,34 +67,29 @@
         android:layout_alignParentTop="true">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/dado3"
-            android:textSize="22dp"
+            android:textSize="14sp"
             android:onClick="tirardado3"
-            android:textColor="#000000"
-            android:text="dado3"/>
+            android:text="DADO 3"/>
         <TextView
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/resultado3"
-            android:textSize="22dp"
-            android:textColor="#000000"/>
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
 
-
-
-
-
-
     <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
