--- a/OcalimochoApp/app/src/main/res/layout/activity_marcas.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_marcas.xml
@@ -5,15 +5,7 @@
     android:gravity="center"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
-    <TextView
-        android:layout_width="130dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:id="@+id/titulo"
-        android:text="MARCAS"/>
+
     <ImageView
         android:id="@+id/imagenmarcas"
         android:layout_width="100dp"
@@ -26,25 +18,25 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textColor="#000000"
+        android:textSize="14sp"
         android:id="@+id/instrucciones"
         android:text="La marca que te ha tocado es: "/>
 
     <TextView
-        android:layout_width="300dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="25dp"
-        android:textColor="#000000"
+        android:textSize="18sp"
         android:id="@+id/marca"
-        android:text=" "/>
+        android:text=""
+        android:textAlignment="center" />
     <Button
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
