--- a/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
@@ -5,15 +5,7 @@
     android:gravity="center"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
-    <TextView
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:id="@+id/titulo"
-        android:text="PREGUNTA"/>
+
     <ImageView
         android:id="@+id/imagenPregunta"
         android:layout_width="100dp"
@@ -25,16 +17,14 @@
         android:layout_width="300dp"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="25dp"
-        android:textColor="#000000"
+        android:textSize="14sp"
         android:id="@+id/pregunta"
-        android:text=" "/>
+        android:text=""/>
     <TextView
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="22dp"
-        android:textColor="#000000"
+        android:textSize="14sp"
         android:id="@+id/AvisoTabu"
         android:text="Las posibles respuestas son: "/>
     <LinearLayout
@@ -46,21 +36,21 @@
         android:layout_alignParentTop="true">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta1"
-            android:textSize="12dp"
+            android:textSize="14sp"
             android:onClick="respuesta1"
-            android:textColor="#000000"
-            android:text="respuesta1"/>
+            android:text="RESPUESTA 1"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta2"
-            android:textSize="12dp"
+            android:textSize="14sp"
             android:onClick="respuesta2"
-            android:textColor="#000000"
-            android:text="respuesta2"/>
+            android:text="RESPUESTA 2"/>
     </LinearLayout>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -71,29 +61,30 @@
         android:layout_alignParentTop="true">
 
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta3"
-            android:textSize="12dp"
-            android:textColor="#000000"
+            android:textSize="14sp"
             android:onClick="respuesta3"
-            android:text="respuesta3"/>
+            android:text="RESPUESTA 3"/>
         <Button
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta4"
             android:onClick="respuesta4"
-            android:textSize="12dp"
-            android:textColor="#000000"
-            android:text="respuesta4"/>
+            android:textSize="14sp"
+            android:text="RESPUESTA 4"/>
     </LinearLayout>
 
     <Button
-        android:layout_width="120dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="Continuar"/>
+        android:text="VOLVER AL TABLERO"/>
 
 
 </LinearLayout>
