--- a/OcalimochoApp/app/src/main/res/layout/activity_yo_nunca.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_yo_nunca.xml
@@ -1,8 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.cokepedreira.ocalimochoapp.MimicaActivity">
 
 
@@ -10,24 +11,28 @@
         android:id="@+id/imagenYoNunca"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:gravity="start"
-        android:contentDescription="Imagen de mimica"/>
+        android:contentDescription="Imagen de mimica"
+        android:gravity="start" />
 
 
     <TextView
+        android:id="@+id/yoNunca"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="18sp"
-        android:id="@+id/yoNunca"
-        android:text=" "/>
+        android:text=" "
+        android:layout_marginTop="16dp"
+        android:textColor="?attr/textColor"
+        android:textSize="18sp" />
+
     <Button
+        android:id="@+id/continuar"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:id="@+id/continuar"
         android:onClick="volverTablero"
-        android:text="VOLVER AL TABLERO"/>
+        android:text="VOLVER AL TABLERO"
+        android:textColor="?attr/textColor" />
 
 
 </LinearLayout>
