--- a/OcalimochoApp/app/src/main/res/layout/activity_ranking.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_ranking.xml
@@ -1,21 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cokepedreira.ocalimochoapp.RankingActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.cokepedreira.ocalimochoapp.RankingActivity">
 
     <TextView
-        android:text="Clasificación"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="20sp"
+        android:layout_margin="20dp"
         android:gravity="center_horizontal"
-        android:layout_margin="20dp"/>
+        android:text="Clasificación"
+        android:textColor="?attr/textColor"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/ranking_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:textColor="?attr/textColor" />
 
 </LinearLayout>
