--- a/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_tablero.xml
@@ -1,32 +1,32 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/tablero_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:padding="0dp" />
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/tirarDado"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
             android:text="TIRAR DADO"
-            style="?android:attr/borderlessButtonStyle"/>
+            android:textColor="?attr/textColor" />
 
     </LinearLayout>
 
