--- a/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
+++ b/OcalimochoApp/app/src/main/res/layout/fragment_casilla.xml
@@ -12,16 +12,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="30dp"
-        android:background="#616161"
         android:translationZ="2dp"
-        card_view:cardCornerRadius="2dp">
+        card_view:cardCornerRadius="2dp"
+        >
 
         <LinearLayout
             android:id="@+id/card_view_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="4dp">
+            android:paddingBottom="4dp"
+            android:background="?attr/cardColor">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,6 +77,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="?attr/cardColor"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -101,7 +104,7 @@
                         android:paddingEnd="15dp"
                         android:paddingStart="15dp"
                         android:text="Descripción"
-                        android:textColor="#EEEEEE"
+                        android:textColor="?attr/textColor"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -115,7 +118,7 @@
                         android:paddingEnd="15dp"
                         android:paddingStart="15dp"
                         android:text="Texto de la descripción"
-                        android:textColor="#EEEEEE"
+                        android:textColor="?attr/textColor"
                         android:textSize="14sp" />
 
                     <TextView
@@ -125,7 +128,7 @@
                         android:paddingEnd="15dp"
                         android:paddingStart="15dp"
                         android:text="Jugadores en la casilla"
-                        android:textColor="#EEEEEE"
+                        android:textColor="?attr/textColor"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -138,7 +141,7 @@
                         android:paddingEnd="15dp"
                         android:paddingStart="15dp"
                         android:text="Lista de jugadores"
-                        android:textColor="#EEEEEE"
+                        android:textColor="?attr/textColor"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -147,7 +150,7 @@
             <Button
                 android:id="@+id/accion"
                 style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
