--- a/OcalimochoApp/app/src/main/res/values/colors.xml
+++ b/OcalimochoApp/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="ColorPrimaryDark">#482da8</color>
     <color name="ColorAccent">#009688</color>
     <color name="ColorAccentDark">#00796B</color>
+    <color name="ColorText">#ffff</color>
 
 
 </resources>
